--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
-    <style>
-        /* Styles CSS intégrés */
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #000; /* Fond noir */
-            color: #fff;           /* Texte blanc */
-            font-family: Arial, sans-serif;
-            font-size: 3rem;
-        }
-    </style>
+    <title>Portfolio Simple</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Soon...</div>
+    <div class="portfolio">
+        <div class="card" onclick="openLink('https://its-lex.github.io/portfolio/')">
+            <img src="512x.png" alt="Icône Projet 1" class="icon">
+            <h3 class="title">Portfolio</h3>
+            <p class="description">Site qui me sert de portfolio (ici)</p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
